Update PS2 randomization

--- a/Randomization_simulation_methods/Problem_Sets/PS_2_Key.qmd
+++ b/Randomization_simulation_methods/Problem_Sets/PS_2_Key.qmd
@@ -167,3 +167,13 @@ plot(b)
 boot.ci(b, type="bca")
 ```
 
+
+An example interval test
+
+jackknife
+bootstrap
+
+compare performance for simulated vals? - later?
+
+
+A few randomizations
