--- a/Randomization_simulation_methods/Problem_Sets/PS_1_Key.qmd
+++ b/Randomization_simulation_methods/Problem_Sets/PS_1_Key.qmd
@@ -119,7 +119,7 @@ What do you find?
 
 The statistical test you just did is based on our expectations for random sampling of two groups producing a difference as big or bigger than that you observe in this set, assuming a normal distribution. Let's simulate a null distribution assuming the entire dataset is from a single distribution and the true distribution is normal. 
 
-Calculate the overall mean and standard deviation for the observed data and use those to generate 10,000 datasets in two groups of the same size as the small data. Then calculate the differences in the means for each iteration and plot them as a histogram. 
+Calculate the overall mean and standard deviation for the observed data (both groups together) and use those to generate 10,000 datasets in two groups of the same size as the small data. Then calculate the differences in the means for each iteration and plot them as a histogram. 
 
 ```{r}
 #| echo: true
@@ -131,8 +131,8 @@ grandsd <- sd(MM$y)
 niter <- 10000
 gdifs <- rep(NA, niter)
 for (ii in 1:niter) {
-  grp1 <- rnorm(nrow(MM[MM$Group=="Group_1",]), grandmu, grandsd)
-  grp2 <- rnorm(nrow(MM[MM$Group=="Group_2",]), grandmu, grandsd)
+  grp1 <- rnorm(nrow(MM[MM$Group=="Group_1", ]), grandmu, grandsd)
+  grp2 <- rnorm(nrow(MM[MM$Group=="Group_2", ]), grandmu, grandsd)
   gdifs[ii] <- mean(grp1) - mean(grp2)
 }
 
@@ -167,7 +167,7 @@ For the *t*-test, we have to double the resulting *P*-value to account for both 
 
 In this question we want to explore what it means when we say "asymptotic" and what happens when the assumptions aren't met.
 
-In the chunk below, set the random number seed and then generate 100,000 (`1e5`) random samples from a standard normal distribution^[This demonstration will work with any normal distribution, but choosing the standard normal allows us to not have to specify the mean and standard deviation each time we use a `norm` function.]. Next, sort the values (or do this in one step). You should end up with a vector of 100,000 values sorted from low to high.
+In the chunk below, set the random number seed and then generate 100,000 (`1e5`) random samples from a standard normal distribution^[100,000 points will be enough to represent the full reasonable range of the distribution. This demonstration will work with any normal distribution, but choosing the standard normal allows us to not have to specify the mean and standard deviation each time we use a `norm` function.]. Next, sort the values (or do this in one step). You should end up with a vector of 100,000 values sorted from low to high.
 
 ```{r}
 #| echo: true
@@ -399,7 +399,7 @@ FIXME
 
 This same phenomenon occurs when we repeatedly sample and summarize from a set of observations. Typically when we take a sample from some distribution and compute a summary of some kind, the resulting distribution of values will be normally distributed. Let's use a highly skewed real dataset to see how this works for a simple case, the mean. 
 
-In the Data4Ecologists package, there is a dataset of wolf pack sizes. Load the library and use glimpse to look at the `WolfPackSize` dataset. We'll focus on the `size` column, which is just the number of wolves in each pack that was observed in this study.
+In the Data4Ecologists package (install with `remotes::install_github("jfieberg/Data4Ecologists")`), there is a dataset of wolf pack sizes. Load the library and use glimpse to look at the `WolfPackSize` dataset. We'll focus on the `size` column, which is just the number of wolves in each pack that was observed in this study.
 
 Make a histogram, choosing an appropriate number of bins of wolf pack sizes and note your observations about its distribution. 
 
@@ -453,7 +453,6 @@ for(ii in 1:niter) {
 mupack |>
   ggplot(aes(p5)) +
   geom_histogram(bins = 15, fill = "grey75")
-
 
 ```
 
